<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_rounded"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/select_image"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light" />

        <TextView
            android:id="@+id/btn_pick_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/padding_default"
            android:text="@string/pick_image"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light" />

        <TextView
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/padding_default"
            android:text="@string/capture_image"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_rounded_selector"
        android:gravity="center"
        android:padding="@dimen/padding_big"
        android:text="@string/cancel"
        android:textColor="@color/gray_color_selector"
        android:textSize="@dimen/text_size_big" />
</LinearLayout>