<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/about"
            android:textColor="@color/white_color_selector"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/btn_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/album"
            android:textColor="@color/white_color_selector"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/btn_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/book"
            android:textColor="@color/white_color_selector"
            android:textSize="@dimen/text_size_default" />
    </LinearLayout>
</RelativeLayout>