<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/album_name"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_white_border_thin"
            android:ellipsize="end"
            android:hint="@string/album_name_hint"
            android:maxLines="1"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_default"
            android:paddingRight="@dimen/margin_default"
            android:paddingTop="@dimen/margin_small"
            android:textColor="@color/white"
            android:textColorHint="@color/white_transfer"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/album_desc"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_white_border_thin"
            android:gravity="top"
            android:hint="@string/album_name_hint"
            android:minLines="5"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_default"
            android:paddingRight="@dimen/margin_default"
            android:paddingTop="@dimen/margin_small"
            android:textColor="@color/white"
            android:textColorHint="@color/white_transfer"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/album_location"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btn_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_white_border_thin"
            android:drawableRight="@drawable/ic_location_white_trans_15dp"
            android:hint="@string/album_location_hint"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_default"
            android:paddingRight="@dimen/margin_default"
            android:paddingTop="@dimen/margin_small"
            android:textColor="@color/white"
            android:textColorHint="@color/white_transfer"
            android:textSize="@dimen/text_size_small" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_large"
            android:background="@drawable/bg_blue_small_border_selector"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_default"
            android:paddingRight="@dimen/margin_default"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/create_album"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_default" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>