<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/radius_normal"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:paddingTop="@dimen/padding_default"
            android:text="@string/enter_price"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:visibility="visible" />

        <com.paditech.mvpbase.common.view.PriceEditText
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_big"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_gray_border_thin"
            android:hint="@string/enter_price_mess"
            android:inputType="number"
            android:minWidth="@dimen/min_dialog_width"
            android:paddingBottom="@dimen/margin_small"
            android:paddingLeft="@dimen/padding_default"
            android:paddingRight="@dimen/padding_default"
            android:paddingTop="@dimen/margin_small"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_color_primary_selector"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/gray_color_selector"
                android:textStyle="bold" />


            <View
                android:id="@+id/line"
                android:layout_width="@dimen/line_size"
                android:layout_height="match_parent"
                android:background="@color/gray_light"
                android:visibility="visible" />

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_color_primary_selector"
                android:gravity="center"
                android:padding="@dimen/padding_normal"
                android:text="@string/cancel"
                android:textColor="@color/gray_color_selector"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>